--- a/langchain_agent.ipynb
+++ b/langchain_agent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPOIAsTclheMVY+1rTZwe2s",
+      "authorship_tag": "ABX9TyNiTVbkwBLBs7USUXjD9hlr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
         "##Assalam o Alaikum to our best teachers.\n",
         "\n",
         "I have developed a LangChain\n",
-        "agent that integrates three powerful tools: OpenAI, the Tavily search engine, and the OpenWeatherMap model. This agent is designed to provide smooth and accurate answers to a wide range of queries. Feel free to ask it anything, and it will respond effortlessly."
+        "agent that integrates three powerful tools: OpenAI, the Tavily search engine, and the OpenWeatherMap model. This agent is designed to provide smooth and accurate answers to a wide range of queries.I used tool calling and it can decide which tool have to call.You can also use it as calculator. Feel free to ask it anything, and it will respond effortlessly."
       ],
       "metadata": {
         "id": "gJ-r2iRRu-AC"
@@ -51,7 +51,7 @@
         "collapsed": true,
         "outputId": "4bbd1be2-406e-4962-9a70-ee52a0d9bc8f"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,7 +241,7 @@
       "metadata": {
         "id": "jzZefsCgPBmg"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -260,7 +260,7 @@
         "id": "l9JxOYpEPHBk",
         "outputId": "7e69cb44-c6bc-4cd6-a54e-9ba2f47d7dfb"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
