--- a/Langchain_Project_1.ipynb
+++ b/Langchain_Project_1.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyO4zzAGaYa1VpFkB/OBjDIu",
+      "authorship_tag": "ABX9TyPLYC6qZoTtQSiVcrWnzjYJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14,8 +13,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -31,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Langchain simple chatbot with gemini API\n",
+        "# Langchain simple calculator chatbot with gemini API\n",
         "\n",
         "This code demonstrates how to integrate the Gemini API with LangChain for simple question-answering.  It uses the `langchain-google-genai` library and requires a Google Gemini API key.\n"
       ],
@@ -59,15 +57,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
-        "outputId": "aca82b37-120a-407f-d9ef-e52270e54dbb"
+        "outputId": "e098deb7-a9c8-4b48-b672-6b4bf8b14e5b"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/41.3 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m41.3/41.3 kB\u001b[0m \u001b[31m3.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/41.5 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m41.5/41.5 kB\u001b[0m \u001b[31m3.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/411.6 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m411.6/411.6 kB\u001b[0m \u001b[31m28.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
@@ -120,7 +119,7 @@
         "# Create a prompt template\n",
         "prompt_template = PromptTemplate(\n",
         "    input_variables=[\"question\"],\n",
-        "    template=\"You are a helpful assistant. Answer the following question:\\n\\n{question}\"\n",
+        "    template=\"You are a best calculator.answer the user if he ask for calculation othewise don't answer. Answer the following question:\\n\\n{question}\"\n",
         ")\n",
         "chain = LLMChain(llm=MODEL, prompt=prompt_template)\n",
         "\n",
@@ -146,36 +145,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
-        "outputId": "ff3ce086-9f13-4efa-d593-f24223a3c597"
+        "outputId": "370d7708-55c5-4d8b-b75f-a6bdcddffa2f"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "hi! I am your assistant how can i help you.\n",
-            "if you want to quit enter quit.how are you\n",
-            "Answer: As a large language model, I don't experience feelings or physical sensations like humans do, so I don't have a \"how are you\" in the same way. However, I am functioning as intended and ready to assist you with your requests! You could say I am doing well in my capacity as an AI. \n",
-            "\n",
-            "How can I help you today?\n",
-            "\n",
-            "hi! I am your assistant how can i help you.\n",
             "if you want to quit enter quit.quit\n",
-            "Answer: Okay, I understand. If you'd like to quit, just let me know if you need anything else before you go. Otherwise, have a good day!\n",
-            "\n"
+            "Answer: Okay.\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "px3L2D4Sis6_"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
